--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -8,8 +8,8 @@ Obecnie na rynku spotkać można wiele systemów typu eBOK. Jednym z nich jest s
 
 \begin{figure}[htb]
 	\centering
-		\includegraphics[width=0.85\linewidth]{zrzuty_ekranu/energa_manual_1.png} \\[-1ex]
-		\includegraphics[width=0.85\linewidth]{zrzuty_ekranu/energa_manual_2.png} \\[-1ex]
+		\includegraphics[width=0.85\linewidth]{rys01/energa_manual_1.png} \\[-1ex]
+		\includegraphics[width=0.85\linewidth]{rys01/energa_manual_2.png} \\[-1ex]
 		\caption{Opis scenariusza dokonania płatności za energię elektryczną w serwisie ,,Energa24''~\cite{energa}}
 	\label{fig:energa_manual}
 \end{figure}
@@ -24,7 +24,7 @@ Rysunek \ref{fig:play24_manual} ilustruje te funkcje, jak użytkownicy mogą śl
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.6\linewidth]{zrzuty_ekranu/play_manual}
+    \includegraphics[width=0.6\linewidth]{rys01/play_manual}
     \caption{Opis głównych funkcji oferowanych w systemie ,,Play24''}
     \label{fig:play24_manual}
 \end{figure}
@@ -32,26 +32,26 @@ Rysunek \ref{fig:play24_manual} ilustruje te funkcje, jak użytkownicy mogą śl
 Dostępne są również rozwiązania dostosowane specjalnie do potrzeb spółdzielni i wspólnot mieszkaniowych. Przykładem może być system ,,e-Kartoteka'', który umożliwia mieszkańcom zarządzanie zgłoszeniami usterek oraz podgląd postępu zgłoszenia, wgląd oraz regulację w płatności za nieruchomość, wgląd w dokumenty nieruchomości oraz wspólnoty, głosowanie nad uchwałami wspólnoty, a także komunikację z zarządem~\cite{e-kartoteka}. System ten oferuje również możliwość przeglądania rozliczeń mediów, takich jak woda, energia elektryczna czy ogrzewanie, co ułatwia mieszkańcom śledzenie swoich bieżących opłat i zużycia. Aplikacja ,,e-Kartoteka'' umożliwia również mieszkańcom szybki dostęp do wyciągów z rachunków i opłat miesięcznych, w tym szczegółowych rozliczeń za media (patrz rysunek~\ref{fig:kartoteka_manual}). Dzięki intuicyjnemu interfejsowi użytkownicy mogą sprawnie poruszać się między funkcjami, takimi jak tablica ogłoszeń, forum dyskusyjne dla mieszkańców czy dokumentacja nieruchomości, co znacząco poprawia komunikację i współpracę w obrębie wspólnoty. Ponadto mieszkańcy mają możliwość zgłaszania odczytów liczników, co automatycznie generuje informacje na temat aktualnego stanu rozliczeń oraz zaległych opłat, podobnie jak widoczne na przedstawionym obrazie funkcje raportowania stanu liczników i przeglądania historii faktur.
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.6\linewidth]{zrzuty_ekranu/kartoteka_manual}
+    \includegraphics[width=0.6\linewidth]{rys01/kartoteka_manual}
     \caption{Opis głównych funkcji oferowanych w systemie ,,e-Kartoteka''~\cite{e-kartoteka_manual}}
     \label{fig:kartoteka_manual}
 \end{figure}
 
-Systemy eBOK różnią się funkcjonalnością, skalowalnością i stopniem integracji z innymi systemami, takimi jak narzędzia płatności online, systemy zarządzania nieruchomościami i aplikacje mobilne. W zależności od charakterystyki organizacji, wybór konkretnego rozwiązania będzie zależał od potrzeb operacyjnych, liczby użytkowników i stopnia automatyzacji procesów. Wdrożenie takich systemów wymaga odpowiedniego doboru technologii i architektury, co niesie za sobą wiele wyzwań. Projektowanie systemów eBOK stanowi doskonałą okazję do przetestowania i rozwijania umiejętności w zakresie programowania, automatyzacji procesów i zarządzania projektami informatycznymi. Właśnie z tego powodu podjęto się tego tematu w niniejszej pracy, by w praktyce rozwiązać problem automatyzacji obsługi wspólnot mieszkaniowych i usprawnić komunikację pomiędzy mieszkańcami a administracją.
+Systemy eBOK różnią się pod względem funkcji, skalowalności oraz stopnia integracji z innymi rozwiązaniami, takimi jak narzędzia płatności online, systemy zarządzania nieruchomościami czy aplikacje mobilne. Wybór odpowiedniego systemu zależy od potrzeb operacyjnych organizacji, liczby użytkowników oraz poziomu automatyzacji procesów. Wdrożenie eBOK-ów wymaga przemyślanego doboru technologii i architektury, co wiąże się z licznymi wyzwaniami. Projektowanie tych systemów stanowi okazję do rozwijania umiejętności programistycznych, automatyzacji procesów i zarządzania projektami IT. Niniejsza praca koncentruje się na rozwiązaniu problemu automatyzacji obsługi wspólnot mieszkaniowych oraz usprawnieniu komunikacji między mieszkańcami a administracją.
 
-Tematem niniejszej pracy inżynierskiej jest projektowanie i wdrożenie aplikacji Elektronicznego Biura Obsługi Klienta (eBOK) dla wspólnoty mieszkaniowej. Wybór tego rozwiązania jest odpowiedzią na rosnącą potrzebę automatyzacji procesów obsługi klienta oraz usprawnienia komunikacji między mieszkańcami a administracją. Współczesne eBOK-i nie tylko eliminują konieczność kontaktu osobistego czy telefonicznego, ale także oferują użytkownikom możliwość załatwienia większości spraw online, co wpływa na wygodę, oszczędność czasu oraz bezpieczeństwo transakcji i komunikacji.
+Celem niniejszej pracy inżynierskiej jest zaprojektowanie i wdrożenie aplikacji eBOK dla wspólnoty mieszkaniowej. Wybór tego rozwiązania wynika z potrzeby automatyzacji procesów obsługi mieszkańców oraz poprawy komunikacji między mieszkańcami a administracją. Nowoczesne systemy eBOK eliminują konieczność bezpośredniego kontaktu, umożliwiając załatwienie większości spraw online, co zwiększa wygodę, oszczędność czasu oraz bezpieczeństwo transakcji i wymiany informacji.
 
-Finalny produkt opracowywany w ramach tej pracy inżynierskiej będzie nosił nazwę ,,Harmony Home Net''. Nazwa ta odzwierciedla kluczowe cele systemu, takie jak ułatwienie komunikacji i współpracy między mieszkańcami a administracją, zapewniając przy tym płynne i zintegrowane zarządzanie nieruchomościami.
+Finalny produkt opracowywany w tej pracy nosi nazwę „Harmony Home Net”, odzwierciedlając kluczowe cele aplikacji: ułatwienie komunikacji i współpracy między mieszkańcami a administracją oraz zapewnienie płynnego i zintegrowanego zarządzania nieruchomościami.
 
 \section{Cel i zakres pracy}
 
-Celem niniejszego opracowania jest zaprojektowanie i wdrożenie internetowej aplikacji elektronicznego biura obsługi klienta (eBOK) dla wspólnoty mieszkaniowej. Aplikacja ma ułatwiać zarządzanie procesami związanymi z komunikacją, płatnościami, zgłoszeniami technicznymi i dostępem do odpowiednich dokumentów. Dzięki temu zarówno mieszkańcy wspólnoty, jak i użytkownicy zarządzający będą mogli korzystać z kompleksowego narzędzia, które powinno automatyzować wiele codziennych zadań i zwiększać efektywność zarządzania.
+Celem niniejszej pracy jest zaprojektowanie i wdrożenie internetowej aplikacji elektronicznego biura obsługi klienta (eBOK) dla wspólnoty mieszkaniowej. Aplikacja ma na celu ułatwienie zarządzania procesami związanymi z komunikacją, płatnościami, zgłoszeniami technicznymi oraz dostępem do dokumentów. Dzięki temu zarówno mieszkańcy, jak i administratorzy będą mogli korzystać z kompleksowego narzędzia, które ma automatyzować wiele codziennych zadań i zwiększać efektywność zarządzania wspólnotą.
 
-Zakres prac obejmuje cały cykl rozwoju oprogramowania, począwszy od analizy potrzeb wspólnoty mieszkaniowej, przez zaprojektowanie architektury systemu, aż po wdrożenie i przetestowanie gotowego rozwiązania. Analiza wymagań będzie obejmować zarówno potrzeby funkcjonalne, jak i niefunkcjonalne, takie jak bezpieczeństwo, wydajność oraz łatwość integracji z zewnętrznymi systemami. Projektowanie uwzględnia iteracyjny proces testowania oraz możliwość przyszłych rozszerzeń o dodatkowe moduły funkcjonalne.
+Zakres prac obejmuje pełny cykl rozwoju oprogramowania, od analizy potrzeb wspólnoty, poprzez projektowanie architektury systemu, aż po wdrożenie i przetestowanie gotowego rozwiązania. Analiza wymagań obejmie zarówno potrzeby funkcjonalne, jak i niefunkcjonalne, takie jak bezpieczeństwo, wydajność oraz integracja z zewnętrznymi systemami. Projektowanie uwzględnia iteracyjne testowanie oraz możliwość dalszego rozszerzania systemu o nowe moduły funkcjonalne.
 
-Aplikacja będzie dostępna w przeglądarce internetowej i zoptymalizowana pod kątem dostępu z różnych urządzeń, w tym również w wersji desktopowej. Backend systemu zostanie zrealizowany z wykorzystaniem technologii Java i Spring Boot, co umożliwi tworzenie skalowalnych, bezpiecznych i łatwych w utrzymaniu aplikacji. Baza danych PostgreSQL będzie działać jako obraz Dockerowy, co zapewni izolację środowiska oraz ułatwi wdrażanie, zarządzanie i skalowanie aplikacji~\cite{EARTHLY}.
+Aplikacja będzie dostępna w przeglądarce internetowej i zoptymalizowana pod kątem dostępu z różnych urządzeń, w tym także w wersji desktopowej. Backend systemu zostanie stworzony w technologii Java i Spring Boot, co umożliwi budowę skalowalnych, bezpiecznych i łatwych w utrzymaniu aplikacji. Baza danych PostgreSQL będzie działać jako obraz Dockerowy, co zapewni izolację środowiska oraz ułatwi wdrażanie, zarządzanie i skalowanie aplikacji~\cite{EARTHLY}.
 
-Frontend aplikacji zostanie stworzony w języku TypeScript i frameworku Next.js, co powinno pozwolić na zbudowanie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjność i szybkie działanie aplikacji.
+Frontend aplikacji zostanie zaprojektowany w języku TypeScript z wykorzystaniem frameworka Next.js, co pozwoli na stworzenie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjną obsługę oraz szybkie działanie systemu.
 
 \section{Układ pracy}
 % tutaj opis zawartości kolejnych rozdziałów, można zredagować na końcu
