--- a/Dyplom/rozdzial03.tex
+++ b/Dyplom/rozdzial03.tex
@@ -1,5 +1,13 @@
-\chapter{Implementacja}
-% TO DO: dodać jakieś zagajenie
-W tej części pracy zostanie omówiona implementacja systemu eBOK, która jest kluczowym etapem realizacji projektu. Implementacja odnosi się do praktycznego wdrożenia wcześniej zaprojektowanych funkcji oraz architektury systemu, a także przekształcenia wymagań funkcjonalnych i niefunkcjonalnych w działający kod. Główna uwaga zostanie poświęcona kluczowym aspektom procesu implementacji, takim jak wybór narzędzi programistycznych, struktura kodu, integracja z bazą danych, a także testowanie aplikacji.
+\chapter{Implementacja} 
+%DONE: Rozwinołem wstęp do rodziału o implementacji aplikacji
+W tej części pracy zostanie szczegółowo omówiona implementacja systemu eBOKa „Harmony Home Net”, która stanowi kluczowy etap realizacji projektu. Proces implementacji polega na przełożeniu założeń architektonicznych, wymagań funkcjonalnych oraz niefunkcjonalnych na działający kod, a także integracji poszczególnych komponentów systemu w spójną całość.
 
-Celem tej części pracy jest przedstawienie kroków prowadzących od teoretycznego projektu do działającego systemu, który będzie spełniał założenia funkcjonalne i będzie dostosowany do wymagań użytkowników. Skupimy się również na wyjaśnieniu zastosowanych technologii oraz opisaniu poszczególnych komponentów aplikacji, co pozwoli na pełniejsze zrozumienie procesów związanych z jej realizacją.
+Wdrożenie to obejmuje zarówno warstwę frontendową, odpowiadającą za interakcje użytkowników, jak i backend, zajmujący się logiką biznesową i zarządzaniem danymi. Kluczowym elementem implementacji jest również integracja z bazą danych PostgreSQL uruchomioną w środowisku Docker, co zapewnia elastyczność, łatwość zarządzania i skalowalność.
+
+W trakcie implementacji szczególny nacisk zostanie położony na wybór odpowiednich narzędzi i technologii, takich jak Next.js dla frontendu oraz Spring Boot dla backendu, a także Docker dla konteneryzacji systemu. Zostaną także omówione aspekty związane z optymalizacją kodu, testowaniem aplikacji oraz monitorowaniem jej działania.
+
+Celem tej części pracy jest opisanie kroków wdrożenia, zaczynając od teoretycznych założeń, przez wybór narzędzi, po realizację poszczególnych funkcji. Szczegółowo omówione zostaną wszystkie kluczowe komponenty systemu, w tym zarządzanie danymi, bezpieczeństwo, a także mechanizmy integracji z systemami zewnętrznymi, co pozwoli na pełne zrozumienie procesu implementacji oraz wyzwań z nim związanych.
+
+Podczas realizacji projektu szczególną uwagę zwrócono na zgodność z wymaganiami funkcjonalnymi oraz niefunkcjonalnymi, które mają na celu zapewnienie wysokiej wydajności, bezpieczeństwa i dostępności systemu. Przedstawione zostaną także kroki, które pozwalają na skalowanie aplikacji, co umożliwi jej obsługę zarówno małych wspólnot, jak i dużych spółdzielni mieszkaniowych.
+
+W ramach implementacji zostaną również omówione procesy testowania oraz weryfikacji systemu, które mają na celu zapewnienie, że końcowy produkt spełnia oczekiwania użytkowników i będzie w pełni funkcjonalny w środowisku produkcyjnym.
