--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -6,6 +6,7 @@
 \noindent\vspace{-\topsep-\partopsep-\parsep} % Jeśli zaczyna się od otoczenia description, to otoczenie to ląduje lekko niżej niż wylądowałby zwykły tekst, dlatego wstawiano przesunięcie w pionie
 \begin{description}[labelwidth=*]
   \item [eBOK] (pl.\ \emph{Elektroniczne Biuro Obsługi Klienta})
+  \item [IT] (ang.\ \emph{Information Technology})
   \item [WWW] (ang.\ \emph{World Wide Web})
   \item [API] (ang.\ \emph{Application Programming Interface})
   \item [HTTPS] (ang.\ \emph{Hypertext Transfer Protocol Secure})
